@@ -38,6 +38,7 @@ bibs <- c(
     derfinder = citation('derfinder')[1], 
     DESeq2 = citation('DESeq2'),
     devtools = citation('devtools'),
+    GEOquery = citation('GEOquery'),
     GenomicFeatures = citation('GenomicFeatures'),
     GenomicRanges = citation('GenomicRanges'),
     IRanges = citation('IRanges'),
@@ -476,6 +477,7 @@ This package was made possible thanks to:
 * `r Biocpkg('BiocStyle')` `r citep(bib[['BiocStyle']])`
 * `r Biocpkg('derfinder')` `r citep(bib[['derfinder']])`
 * `r CRANpkg('devtools')` `r citep(bib[['devtools']])`
+* `r Biocpkg('GEOquery')` `r citep(bib[['GEOquery']])`
 * `r Biocpkg('GenomicFeatures')` `r citep(bib[['GenomicFeatures']])`
 * `r Biocpkg('GenomicRanges')` `r citep(bib[['GenomicRanges']])`
 * `r CRANpkg('knitcitations')` `r citep(bib[['knitcitations']])`
